working, included the js and css files

--- a/Proto/one.encodeinfotech.com/index.html
+++ b/Proto/one.encodeinfotech.com/index.html
@@ -30,8 +30,8 @@
             <button class="btn btn-link d-xl-none" data-et-action="aside-open" data-et-target=".sidebar" p-0 ml-1" id="btnmenu">
                 <i class="fas fa-align-justify"></i>
             </button>
-            <a class="d-none d-md-block" href="index.html"><img alt="Bootstrap 4 Admin Template for .Net Core 2.1" class="brand-logo" src="images/logo.png" style="height:35px;" /></a>
-            <a href="index.html" class="d-md-none"><img alt="Bootstrap 4 Admin Template for .Net Core 2.1" class="brand-logo-icon" src="images/logo-icon.png" style="height:35px;" /></a>
+            <a class="d-none d-md-block" href="{{url('index')}}"><img alt="Bootstrap 4 Admin Template for .Net Core 2.1" class="brand-logo" src="images/logo.png" style="height:35px;" /></a>
+            <a href="{{url('index')}}" class="d-md-none"><img alt="Bootstrap 4 Admin Template for .Net Core 2.1" class="brand-logo-icon" src="images/logo-icon.png" style="height:35px;" /></a>
         </div>
         <div class="container-nav-bar">
             <ul class="nav justify-content-end navbar-right">
